# ChangeLog for media-sound/kluppe
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 Jan 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  -kluppe-0.5.4.ebuild, kluppe-0.6.14.ebuild, -files, metadata.xml:
  Removed outdated ebuild, updated EAPI, depend on virtual/libusb, cleanup

*kluppe-0.6.14 (25 Feb 2010)

  27 Jul 2012; Dominique Michel <dominique@tuxfamily.org> kluppe-0.6.14:
  Added make desktop file

  25 Feb 2010; Frieder Buerzele <evermind@tuxfamily.org> -kluppe-0.6.5.ebuild,
  -kluppe-0.6.8.ebuild, -kluppe-0.6.12.ebuild, +kluppe-0.6.14.ebuild:
  bumped and deleted

  02 Jan 2008; Frieder Buerzele <evermind@tuxfamily.org> ChangeLog:
  bumped to kluppe-0.6.8.ebuild
  added our cflags
  fixed wrong source location fixes bug#38 (thx reuben)

  17 Dec 2007; Thomas Kuther <gimpel@sonnenkinder.org> ChangeLog:
  added a changelog
