@@ -1,4 +1,4 @@
-DIST kluppe-0.6.14.tar.gz 141143 SHA256 08e2b9d4f46acf9ac776ad4c4954db4518a674b43dbf0c3b1f9f92abae049b06 SHA512 a36374c6dd2cae6cd6748b5c9aa3327c2dfe3f67e3e128de42ec6a5529ee551a7820dbd17f00e7ff425a3b1f35216aebc45982234670f66f8304e0cb2e3560e1 WHIRLPOOL bb55870fc483149937c1dab547a88f63a1b0ce3776190c97b16d9fa96ddf4c31e2c0df277f23e0b4b0c3c3f9edcfd0b96622741d2c5c94b8d80af7126692953f
-EBUILD kluppe-0.6.14.ebuild 941 SHA256 f353fd11c56a26ea9f436b065eb6abc376a4edad009481ee14e52d47e59dc793 SHA512 3f3ffd0447c4fc975b60bcb27bbcc569bd0e2276b1b344f3039fe1419c085ade45160ec633ae1235ba9af70a6e91d8fba6ad2497f4baad1e3677df9a9c06b261 WHIRLPOOL 4a94f0f6fda2e527c8288cde7bc872ca9b24c46cd9f87906fa7f621cb7f3ea02310b48aec03db796b97b481bf84b9e4418fa3748df1c381da3e69abb7dcba3c6
-MISC ChangeLog 892 SHA256 05b406c28b1c636f288f4d3b963613345fa5c75f39753f3cae4b5b0f1ed6bc50 SHA512 c2657dc65050fb0757e36458d071cd5bbb628aa3e2747a58b7b4bf3e058bdebaa74191633bde5f98abbb74946752aa59b8e55ed0f6eb8caed4a9135eee243cd6 WHIRLPOOL f0d71d7a54583a22c22738eb746cfecd7af58d9a7bf77e00e5ee5a4c16b86ced692fc3ed9cef824ca4f5e03fd6077dddef23aa5be292b397e79da06992be8e61
+DIST kluppe-0.6.15.tar.gz 146231 SHA256 fa6c63ed7790b6b4052abcf162efd38793adecb6cf56b9c6b420b8095631a277 SHA512 df265e6a2c01d1bce5552820e4c412ff2dfbeea4fe70fe3668aa03cac1a421db8126a20f4204929c07fc70f95923ee5ea5facb2651c55cdc8565034e4bc45820 WHIRLPOOL 97640213fdc57557a3e1dfe1cea98b2902c21c95fbc25b60a5cd0dfc632a090aef6b1849506fe9d096196f98600724cd70f1bd3d6a4741ac34b93364099a8404
+EBUILD kluppe-0.6.15.ebuild 940 SHA256 cf4eebcedd02d08061237337117bb6dc79110045a6ee7cc064c05b2246206b45 SHA512 ef672ee4360f643f0bcad545b7224720ac93f45519f6ffc2ed056f6a01b5048c683bb7855a77fe33f7806af7258bc3268de518322b8fe673bbc3db2986cee009 WHIRLPOOL d62ca887104547afe591c522419c4a14f9fa402c166a7a84ca68d45b11e400daf5f586199efa9bad028833903b4dddcd047e1faa1c82218c67c56b8cc17ec53a
+MISC ChangeLog 1257 SHA256 153946b813fd83e3569226ea945b7fea6de8dc97365f4cb63baa9168fc170de2 SHA512 e9334f349d8af1da9067c5b5e11f7c89cf137bfc047e370299c972f7836a57850b7f545718648583fc7d173d20cfbba4b8b4bab16ae8d81df1ce8ecf58ebdb02 WHIRLPOOL c0770d658b4350c1fec1ee1eaec2cfb006cd72fc4ae700730be77798e92cf0c1862791c43f32bee70dafe0bfeef846bea0d8d4c5e3c64a362876ecde99bb6e9f
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
