@@ -2,6 +2,16 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*kluppe-0.6.15 (15 Dec 2013)
+
+  15 Dec 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  -kluppe-0.6.14.ebuild, +kluppe-0.6.15.ebuild:
+  Version bump. Thanks to Zlobin Nikita for the report.
+  Remove old ebuild (source removed upstream).
+  Create a wrapper around emake instead of patching the Makefile.
+  Order dependencies.
+  Slotted dependency on gtk+.
+
   26 Jan 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
   -kluppe-0.5.4.ebuild, kluppe-0.6.14.ebuild, -files, metadata.xml:
   Removed outdated ebuild, updated EAPI, depend on virtual/libusb, cleanup
